@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,83
-#define STRPRODUCTVER  "0,4,0,83"
-#define STRPRODUCTDATE "2011-08-07"
+#define PRODUCTVER     0,4,0,84
+#define STRPRODUCTVER  "0,4,0,84"
+#define STRPRODUCTDATE "2011-08-14"
 #endif // VERSION_HPP
